--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "scss": "^0.2.4",
+    "theme.js": "^1.0.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -18,7 +20,8 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "node-sass": "^6.0.0"
   },
   "eslintConfig": {
     "root": true,
